#62 Fix overflow dropdowns on lg touch devices. Use variables for tool-group breakpoints.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -341,3 +341,15 @@ $touch-footer-height: $touch-header-height;
 $error-width: 320px;
 $error-spacing: $space-xs;
 $permanent-toolbar-width: 15px;
+
+
+// Rich editor
+// --------------------------------------------------
+
+$bp-sub-sup-sm:         874px;
+$bp-sub-sup-lg:         1678px;
+$bp-remove-format-lg:   1270px;
+$bp-blockquote-link-sm: 830px;
+$bp-blockquote-link-lg: 1544px;
+$bp-lists-sm:           815px;
+$bp-lists-lg:           1500px;
